[project]
name = "yawbdl"
version = "1.0.2-dev"
description = "A tool to download pages from Internet Archive."
authors = [
    {name = "BGforge", email = "dev@bgforge.net"}
]
keywords = ["Internet Archive", "web.archive.org"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://github.com/BGforgeNet/yawbdl"
Repository = "https://github.com/BGforgeNet/yawbdl"

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]  # Enable import sorting

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.pylint.format]
max-line-length = 120
