[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yawbdl"
version = "1.1.3"
description = "A tool to download pages from Internet Archive."
authors = [
    {name = "BGforge", email = "dev@bgforge.net"}
]
keywords = ["Internet Archive", "web.archive.org"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "requests>=2.32.4",
]

[project.scripts]
yawbdl = "yawbdl:main"

[project.urls]
Homepage = "https://github.com/BGforgeNet/yawbdl"
Repository = "https://github.com/BGforgeNet/yawbdl"

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "PLC", "PLE", "PLR", "PLW", "C4", "PIE", "RET", "ISC"]
ignore = [
    "PLR2004",  # magic value comparisons — HTTP status codes and arg counts are clear in context
    "ISC001",   # conflicts with ruff formatter
]

[tool.ruff.lint.per-file-ignores]
"yawbdl.py" = [
    "PLW0603",  # global statement — module-level config from argparse is the intended design
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
